Meny och footer skapade

--- a/src/tailwind.html
+++ b/src/tailwind.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-    
+        <!--Skapa meny-->
+    <div>
+        <a href="/src/index.html">Startsida</a>
+        <a href="/src/tailwind.html">Tailwind</a>
+        <a href="/src/bootstrap.html">Bootstrap</a>
+        <a href="/src/publicering.html">Publicering</a>
+    </div>
+
+        <footer>
+        Moment 1 <br> emfo2405
+    </footer>
+
 
 </body>
 </html>
