--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,31 @@
 </head>
 
 <body>
+    <!--Skapa meny-->
+    <div>
+        <a href="/src/index.html">Startsida</a>
+        <a href="/src/tailwind.html">Tailwind</a>
+        <a href="/src/bootstrap.html">Bootstrap</a>
+        <a href="/src/publicering.html">Publicering</a>
+    </div>
+
+    <div>
+        <h1>Moment 1</h1>
+    </div>
+
+    <!--Information om uppgiften-->
+    <div>
+        <h2>Om uppgiften</h2>
+        <p></p>
+        <h3>Bootstrap</h3>
+        <p></p>
+        <h3>Tailwind</h3>
+    </div>
+
+    <footer>
+        Moment 1 <br> emfo2405
+    </footer>
+
 
 </body>
 </html>
