HTML-element har lagts till på alla undersidor

--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -17,6 +17,90 @@
         <a href="/src/publicering.html">Publicering</a>
     </div>
 
+        <div>
+        <h1>Bootstrap</h1>
+    </div>
+
+    <div>
+        <h2>Information om ramverket</h2>
+        <p></p>
+        <a href="https://getbootstrap.com/">Länk till ramverk</a>
+        <h3>Utvärdering</h3>
+        <p></p>
+        <h4>Föredelar</h4>
+        <p></p>
+        <h4>Nackdelar</h4>
+        <p></p>
+    </div>
+
+    <div>
+        <table>
+            <tr>
+                <th>Titel</th>
+                <th>Titel</th>
+                <th>Titel</th>
+                <th>Titel</th>
+            </tr>
+            <tr>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+            </tr>
+                        <tr>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+            </tr>
+                        <tr>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+            </tr>
+                        <tr>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+            </tr>
+                        <tr>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+                <td>Data</td>
+            </tr>
+        </table>
+    </div>
+
+    <div>
+        <form>
+            <label for="name">Namn:</label><br>
+            <input type="text" id="name" name="name"><br>
+
+            
+            <input type="checkbox" id="check1" name="check1" value="check1">
+            <label for="check">Checkbox 1:</label><br>
+            <input type="checkbox" id="check2" name="check2" value="check2">
+            <label for="check">Checkbox 2:</label><br>
+
+            <label for="select">Välj:</label><br>
+            <select id="select" name="select">
+                <option value="val1">Val1</option>
+                <option value="val2">Val2</option>
+                <option value="val3">Val3</option>
+                <option value="val4">Val4</option>
+                <option value="val5">Val5</option>
+            </select>
+            
+            <label for="message">Meddelande:</label><br>
+            <textarea id="message" name="message" placeholder="Skriv ditt meddelande här..."></textarea><br>
+
+            <input type="submit" value="submit">
+        </form>
+    </div>
+
         <footer>
         Moment 1 <br> emfo2405
     </footer>
