--- a/src/publicering.html
+++ b/src/publicering.html
@@ -17,6 +17,15 @@
         <a href="/src/publicering.html">Publicering</a>
     </div>
 
+    <div>
+        <h1>Publicering</h1>
+    </div>
+
+    <div>
+        <h2>Publiceringsplattform</h2>
+        <p></p>
+    </div>
+
         <footer>
         Moment 1 <br> emfo2405
     </footer>
