Tailwind klasser placerade på HTML-element

--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
-
+    <link href="./index.css" rel="stylesheet">
 </head>
 
 <body>
     <!--Skapa meny-->
     <div>
+        <h1>CSS-ramverk</h1>
+    </div>
+
+    <div id="menu">
         <a href="/src/index.html">Startsida</a>
         <a href="/src/tailwind.html">Tailwind</a>
         <a href="/src/bootstrap.html">Bootstrap</a>
         <a href="/src/publicering.html">Publicering</a>
     </div>
 
-    <div>
+    <div id="pageTitle">
         <h1>Moment 1</h1>
     </div>
 
     <!--Information om uppgiften-->
-    <div>
+    <div id="pageContent">
         <h2>Om uppgiften</h2>
         <p></p>
         <h3>Bootstrap</h3>
