--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,14 @@
     <h1>Startsida</h1>
 
     <!--Information om uppgiften-->
-    <div>
-        <h2 class="pageContent">Om uppgiften</h2>
-        <p></p>
-        <h3 class="pageContent">Bootstrap</h3>
-        <p></p>
-        <h3 class="pageContent">Tailwind</h3>
+    <div class="pageContent">
+        <h2 >Om uppgiften</h2>
+        <p>Syftet med uppgiften är att börja arbeta med CSS-ramverk och förstå hur de kan användas vid utvecklingen av webbplatser. Detta görs genom att först sätta sig in i vilka olika ramverk som finns och läsa på om dem och sedan välja två stycken som ska utvärderas på egna undersidor på en webbsida. På dessa undersidor kommer de respektive ramverken att användas och även beskrivas och utvärderas. Webbplatsen ska även innehåller en startsida, den här sidan, samt en sida som beskriver den publiceringsplattform som webbsidan laddas upp till. För den här uppgiften kommer jag använda två av de mest använda CSS-ramverken, Bootstrap och Tailwind. Användningen och utvärderingen av de olika ramverken kan hittas på undersidorna med samma namn. 
+        </p>
+        <div id="mainBtn">
+        <a class="frameworkBtn" href="./tailwind.html">Till Tailwind</a>
+        <a class="frameworkBtn" href="./bootstrap.html">Till Bootstrap</a>
+        </div>
     </div>
 
     <footer>
