--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
     <link href="./index.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+
 </head>
 
 <body>
@@ -19,6 +21,16 @@
         <a href="/src/tailwind.html">Tailwind</a>
         <a href="/src/bootstrap.html">Bootstrap</a>
         <a href="/src/publicering.html">Publicering</a>
+    </div>
+
+    <div>
+         <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
+    <div id="smallScreenMenu">
+        <a href="/src/index.html">Startsida</a>
+        <a href="/src/tailwind.html">Tailwind</a>
+        <a href="/src/bootstrap.html">Bootstrap</a>
+        <a href="/src/publicering.html">Publicering</a>
+    </div>
     </div>
 
     <h1>Startsida</h1>
@@ -38,6 +50,6 @@
         Moment 1 <br> emfo2405
     </footer>
 
-
+<script src="menu.js"></script>
 </body>
 </html>
