--- a/src/publicering.html
+++ b/src/publicering.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
  <link href="./index.css" rel="stylesheet">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+
 </head>
 
 <body>
@@ -13,11 +15,22 @@
         <h1>CSS-ramverk</h1>
     </div>
         <!--Skapa meny-->
+    <!--Skapa meny-->
     <div id="menu">
         <a href="/src/index.html">Startsida</a>
         <a href="/src/tailwind.html">Tailwind</a>
         <a href="/src/bootstrap.html">Bootstrap</a>
         <a href="/src/publicering.html">Publicering</a>
+    </div>
+
+    <div>
+         <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
+    <div id="smallScreenMenu">
+        <a href="/src/index.html">Startsida</a>
+        <a href="/src/tailwind.html">Tailwind</a>
+        <a href="/src/bootstrap.html">Bootstrap</a>
+        <a href="/src/publicering.html">Publicering</a>
+    </div>
     </div>
 
     <div>
@@ -33,5 +46,6 @@
         Moment 1 <br> emfo2405
     </footer>
 
+    <script src="menu.js"></script>
 </body>
 </html>
