--- a/src/publicering.html
+++ b/src/publicering.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
- <link href="./index.css" rel="stylesheet">
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <link href="./index.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
 
 </head>
 
 <body>
-        <div id="pageTitle">
+    <div id="pageTitle">
         <h1>CSS-ramverk</h1>
     </div>
-        <!--Skapa meny-->
+    <!--Skapa meny-->
     <!--Skapa meny-->
     <div id="menu">
         <a href="/src/index.html">Startsida</a>
@@ -24,13 +25,13 @@
     </div>
 
     <div>
-         <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
-    <div id="smallScreenMenu">
-        <a href="/src/index.html">Startsida</a>
-        <a href="/src/tailwind.html">Tailwind</a>
-        <a href="/src/bootstrap.html">Bootstrap</a>
-        <a href="/src/publicering.html">Publicering</a>
-    </div>
+        <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
+        <div id="smallScreenMenu">
+            <a href="/src/index.html">Startsida</a>
+            <a href="/src/tailwind.html">Tailwind</a>
+            <a href="/src/bootstrap.html">Bootstrap</a>
+            <a href="/src/publicering.html">Publicering</a>
+        </div>
     </div>
 
     <div>
@@ -39,13 +40,32 @@
 
     <div class="pageContent">
         <h2>Publiceringsplattform</h2>
-        <p></p>
+        <p>För den här uppgiften har jag valt att publicera min webbplats på Microsoft Azure. Anledningen till valet var
+            främst att jag inte har använt plattformen innan
+            men också för att det är en populär publiceringsplattform. Den här plattformen har både gratis- och
+            betaltjänster. Dock avslutas gratisperioden efter ett tag.
+            Plattformen stödjer statiska webbplatser men även backend-baserad utveckling. Microsoft Azure har stöd för
+            ett flertal olika programmeringsspråk och de är bland annat C#,
+            Java, JavaScript, PowerShell, Python och Typescript. Eftersom Azure är en väldigt populär
+            publiceringsplattform finns det även mycket information om det och sätt att få hjälp om man stöter på
+            problem.<br>
+            <br>
+            Man kan ladda upp webbplatser med Azure på några olika sätt men det jag gjorde var att ladda upp min skapade
+            webbplats till GitHub och sedan koppla denna till Azure och mitt konto där. Sedan
+            gör man val för sin publikation och sedan skapas den. Om man kopplar den till sitt GitHub-repo uppdateras
+            den även varje gång man pushar nya ändringar till det.
+            Fördelen med Azure tycker jag är att det är ett enkelt sätt att ladda upp och skapa sin webbplats. Det är
+            också enkelt att hitta svar på de frågor som kan uppstå under processen. Nackdelen är
+            att man inte kan använda tjänsten gratis för alltid utan tillslut måste man betala för att ha tillgång till
+            tjänsten.
+        </p>
     </div>
 
-        <footer>
+    <footer>
         Moment 1 <br> emfo2405
     </footer>
 
     <script src="menu.js"></script>
 </body>
+
 </html>
