--- a/src/publicering.html
+++ b/src/publicering.html
@@ -1,6 +1,8 @@
+<!--Inleder en HTML-fil-->
 <!DOCTYPE html>
 <html lang="sv">
 
+<!--Grundinställningar för filen-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,12 +13,12 @@
 
 </head>
 
+<!--Skapar innehållet-->
 <body>
     <div id="pageTitle">
         <h1>CSS-ramverk</h1>
     </div>
-    <!--Skapa meny-->
-    <!--Skapa meny-->
+    <!--Menyn för större skärmstorlekar skapas-->
     <div id="menu">
         <a href="/src/index.html">Startsida</a>
         <a href="/src/tailwind.html">Tailwind</a>
@@ -24,6 +26,7 @@
         <a href="/src/publicering.html">Publicering</a>
     </div>
 
+    <!--Menyn för mindre skärmstorlekar skapas tillsammans med en menysymbol-->
     <div>
         <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
         <div id="smallScreenMenu">
@@ -34,10 +37,12 @@
         </div>
     </div>
 
+    <!--Sidtitel-->
     <div>
         <h1>Publicering</h1>
     </div>
 
+    <!--Textinnehåll-->
     <div class="pageContent">
         <h2>Publiceringsplattform</h2>
         <p>För den här uppgiften har jag valt att publicera min webbplats på Microsoft Azure. Anledningen till valet var
@@ -61,10 +66,12 @@
         </p>
     </div>
 
+    <!--Footer skapas-->
     <footer>
         Moment 1 <br> emfo2405
     </footer>
 
+    <!--Inkluderar JavaScript-fil för att styra menyn-->
     <script src="menu.js"></script>
 </body>
 
