--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -1,55 +1,89 @@
+<!--HTMl-dokument skapat-->
 <!DOCTYPE html>
 <html lang="sv">
 
+<!--Inställningar för filen-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
- <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
+<!--Inledande kod-->
 <body class="text-center bg-body-tertiary">
-        <div class="p-4">
+    <div class="p-4">
         <h1>CSS-ramverk</h1>
     </div>
-        <!--Skapa meny-->
+    <!--Menyn som visas vid mindre skärmstorlekar skapas-->
     <div class="bg-secondary-subtle fs-6 p-2 d-md-none">
-        <span class="btn btn-primary dropdown-toggle bg-secondary border-2 border-secondary" type="button" data-bs-toggle="dropdown">Meny</span>
+        <!--Menyknapp-->
+        <span class="btn btn-primary dropdown-toggle bg-secondary border-2 border-secondary" type="button"
+            data-bs-toggle="dropdown">Meny</span>
+            <!--Menylänkar-->
         <div class="dropdown-menu">
-        <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/index.html">Startsida</a>
-        <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/tailwind.html">Tailwind</a>
-        <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/bootstrap.html">Bootstrap</a>
-        <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/publicering.html">Publicering</a>
-    </div>
+            <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+                href="/src/index.html">Startsida</a>
+            <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+                href="/src/tailwind.html">Tailwind</a>
+            <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+                href="/src/bootstrap.html">Bootstrap</a>
+            <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+                href="/src/publicering.html">Publicering</a>
+        </div>
     </div>
 
+    <!--Meny för större skärmar-->
     <div class="bg-secondary-subtle fs-6 p-2 d-md-block d-none ">
-        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/index.html">Startsida</a>
-        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/tailwind.html">Tailwind</a>
-        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/bootstrap.html">Bootstrap</a>
-        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3" href="/src/publicering.html">Publicering</a>
+        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+            href="/src/index.html">Startsida</a>
+        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+            href="/src/tailwind.html">Tailwind</a>
+        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+            href="/src/bootstrap.html">Bootstrap</a>
+        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
+            href="/src/publicering.html">Publicering</a>
     </div>
 
-
-        <div class="p-4">
+<!--Sidtitel-->
+    <div class="p-4">
         <h1>Bootstrap</h1>
     </div>
 
+    <!--Textsektioner om ramverket-->
     <div class="alert alert-success m-4 col-9 col-lg-8 col-xxl-5 mx-auto" style="border: 3px solid #a0b8ad">
         <h2>Information om ramverket</h2>
-        <p>Bootstrap är, likt Tailwind, ett CSS-ramverk som gör att arbetet med designen av HTML-element blir enklare. I Bootstrap används klasser som sätts på HTML-elementen och dessa innehåller då olika kod för CSS-regler. Med ramverket kan man bland annat ändra saker som färger och padding. Bootstrap har även klasser för att designa större komponenter och har därmed mindre flexibilitet i designen. Med de inbyggda designvalen för komponenter kan man exempelvis enkelt göra stilval för en tabell med några få klasser. Bootstrap har också ett antal förvalda färgval vilket ofta gör att webbsidor designade med Bootstrap får ett liknande utseende. </p>
-        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://getbootstrap.com/">Klicka här för att komma till Bootstraps sida.</a>
+        <p>Bootstrap är, likt Tailwind, ett CSS-ramverk som gör att arbetet med designen av HTML-element blir enklare. I
+            Bootstrap används klasser som sätts på HTML-elementen och dessa innehåller då olika kod för CSS-regler. Med
+            ramverket kan man bland annat ändra saker som färger och padding. Bootstrap har även klasser för att designa
+            större komponenter och har därmed mindre flexibilitet i designen. Med de inbyggda designvalen för
+            komponenter kan man exempelvis enkelt göra stilval för en tabell med några få klasser. Bootstrap har också
+            ett antal förvalda färgval vilket ofta gör att webbsidor designade med Bootstrap får ett liknande utseende.
+        </p>
+        <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+            href="https://getbootstrap.com/">Klicka här för att komma till Bootstraps sida.</a>
         <h3 class="mt-4">Utvärdering</h3>
-        <p>Jag tycker att arbetet med Bootstrap har gått bra. Installationen tycker jag var lite svårare än för Tailwind men det gick ändå hyfsat lätt. Efter att ha arbetat med Tailwinds klasser blev det ganska naturligt hur man använde klasser även med Bootstrap. Även här var det skönt att det fanns en cheat sheet så att man enkelt kunde hitta rätt klasser för ändamålet. Jag tycker att stilvalen för hela komponenter, så som för tabeller, gjorde att det gick väldigt fort att jobba med Bootstrap men med lite mindre anpassningsmöjligheter om man endast ska hålla sig till de satta klasserna. Sedan la jag till lite CSS själv också för att skapa ramar runt element. Fördelarna jag ser med Bootstrap är att det går snabbt och enkelt att skapa design för hemsidor. Det är även praktiskt att kunna designa större element med väldigt få klasser och väldigt enkelt att kunna anpassa element till olika skärmstorlekar. Nackdelen är att det är lite färre valmöjligheter för design och färg. Även att man behöver upprepa en del kod i filen och att det blir lite rörigt efter ett tag med alla uplacerade klasser. </p>
+        <p>Jag tycker att arbetet med Bootstrap har gått bra. Installationen tycker jag var lite svårare än för Tailwind
+            men det gick ändå hyfsat lätt. Efter att ha arbetat med Tailwinds klasser blev det ganska naturligt hur man
+            använde klasser även med Bootstrap. Även här var det skönt att det fanns en cheat sheet så att man enkelt
+            kunde hitta rätt klasser för ändamålet. Jag tycker att stilvalen för hela komponenter, så som för tabeller,
+            gjorde att det gick väldigt fort att jobba med Bootstrap men med lite mindre anpassningsmöjligheter om man
+            endast ska hålla sig till de satta klasserna. Sedan la jag till lite CSS själv också för att skapa ramar
+            runt element. Fördelarna jag ser med Bootstrap är att det går snabbt och enkelt att skapa design för
+            hemsidor. Det är även praktiskt att kunna designa större element med väldigt få klasser och väldigt enkelt
+            att kunna anpassa element till olika skärmstorlekar. Nackdelen är att det är lite färre valmöjligheter för
+            design och färg. Även att man behöver upprepa en del kod i filen och att det blir lite rörigt efter ett tag
+            med alla uplacerade klasser. </p>
 
     </div>
 
 
-
+<!--Formulär skapat-->
     <div class="mt-5">
         <h2 class="p-1">Ramverksformulär</h2>
-        <form class="form-group col-9 col-lg-8 col-xxl-5  mx-auto alert alert-warning m-5" style="border: 3px solid #d9cda7">
+        <form class="form-group col-9 col-lg-8 col-xxl-5  mx-auto alert alert-warning m-5"
+            style="border: 3px solid #d9cda7">
             <label class="mb-2" for="name">Namn:</label>
             <input type="text" class="form-control w-50 mx-auto" id="name" name="name"><br>
 
@@ -76,15 +110,17 @@
                 <option value="tachyons">Tachyons</option>
                 <option value="annat">Annat (skriv det nedan)</option>
             </select>
-            
+
             <label class="mt-4 mb-2" for="comment">Vid val av annat ramverk eller övriga kommentarer:</label><br>
-            <textarea  class="form-control  w-50 mx-auto"  id="comment" name="comment" placeholder="Skriv din kommentar här..."></textarea><br>
+            <textarea class="form-control  w-50 mx-auto" id="comment" name="comment"
+                placeholder="Skriv din kommentar här..."></textarea><br>
 
             <input class="btn btn-dark" type="submit" value="Skicka">
         </form>
     </div>
 
-        <div class="mx-auto col-9 m-5 col-lg-8 col-xxl-5">
+    <!--Tabell skapad-->
+    <div class="mx-auto col-9 m-5 col-lg-8 col-xxl-5">
         <table class="table table-striped table-warning" style="border: 3px solid #d9cda7">
             <tr>
                 <th>Namn</th>
@@ -100,28 +136,28 @@
                 <td>8</td>
                 <td>-</td>
             </tr>
-                        <tr>
+            <tr>
                 <td>Alva</td>
                 <td>Milligram, Tailwind</td>
                 <td>Milligram</td>
                 <td>7</td>
                 <td>-</td>
             </tr>
-                        <tr>
+            <tr>
                 <td>Maj</td>
                 <td>Foundation, Bootstrap</td>
                 <td>Bootstrap</td>
                 <td>9</td>
                 <td>-</td>
             </tr>
-                        <tr>
+            <tr>
                 <td>Lisa</td>
                 <td>Foundation, Tailwind</td>
                 <td>Tailwind</td>
                 <td>7</td>
                 <td>-</td>
             </tr>
-                        <tr>
+            <tr>
                 <td>Saga</td>
                 <td>Tachyons, Foundation</td>
                 <td>Foundation</td>
@@ -131,10 +167,15 @@
         </table>
     </div>
 
-        <footer class="p-3 bg-secondary-subtle mt-5">
+    <!--Footer-->
+    <footer class="p-3 bg-secondary-subtle mt-5">
         Moment 1 <br> emfo2405
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!--Inkluderar JavaScript-filen från Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
