--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,24 @@
+<!--HTMl-dokument skapat-->
 <!DOCTYPE html>
 <html lang="sv">
 
+<!---->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moment 1</title>
     <link href="./index.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
 
 </head>
-
+<!--Huvudinnehåll-->
 <body>
-
+<!--Titel för sidan-->
     <div id="pageTitle">
         <h1>CSS-ramverk</h1>
     </div>
-    <!--Skapa meny-->
+    <!--Meny för större skärmstorlekar skapad-->
     <div id="menu">
         <a href="/src/index.html">Startsida</a>
         <a href="/src/tailwind.html">Tailwind</a>
@@ -23,33 +26,45 @@
         <a href="/src/publicering.html">Publicering</a>
     </div>
 
+    <!--Meny för mindre skärmstorlekar skapad-->
     <div>
-         <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
-    <div id="smallScreenMenu">
-        <a href="/src/index.html">Startsida</a>
-        <a href="/src/tailwind.html">Tailwind</a>
-        <a href="/src/bootstrap.html">Bootstrap</a>
-        <a href="/src/publicering.html">Publicering</a>
-    </div>
+        <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
+        <div id="smallScreenMenu">
+            <a href="/src/index.html">Startsida</a>
+            <a href="/src/tailwind.html">Tailwind</a>
+            <a href="/src/bootstrap.html">Bootstrap</a>
+            <a href="/src/publicering.html">Publicering</a>
+        </div>
     </div>
 
+    <!--Sidtitel-->
     <h1>Startsida</h1>
 
     <!--Information om uppgiften-->
     <div class="pageContent">
-        <h2 >Om uppgiften</h2>
-        <p>Syftet med uppgiften är att börja arbeta med CSS-ramverk och förstå hur de kan användas vid utvecklingen av webbplatser. Detta görs genom att först sätta sig in i vilka olika ramverk som finns och läsa på om dem och sedan välja två stycken som ska utvärderas på egna undersidor på en webbsida. På dessa undersidor kommer de respektive ramverken att användas och även beskrivas och utvärderas. Webbplatsen ska även innehåller en startsida, den här sidan, samt en sida som beskriver den publiceringsplattform som webbsidan laddas upp till. För den här uppgiften kommer jag använda två av de mest använda CSS-ramverken, Bootstrap och Tailwind. Användningen och utvärderingen av de olika ramverken kan hittas på undersidorna med samma namn. 
+        <h2>Om uppgiften</h2>
+        <p>Syftet med uppgiften är att börja arbeta med CSS-ramverk och förstå hur de kan användas vid utvecklingen av
+            webbplatser. Detta görs genom att först sätta sig in i vilka olika ramverk som finns och läsa på om dem och
+            sedan välja två stycken som ska utvärderas på egna undersidor på en webbsida. På dessa undersidor kommer de
+            respektive ramverken att användas och även beskrivas och utvärderas. Webbplatsen ska även innehåller en
+            startsida, den här sidan, samt en sida som beskriver den publiceringsplattform som webbsidan laddas upp
+            till. För den här uppgiften kommer jag använda två av de mest använda CSS-ramverken, Bootstrap och Tailwind.
+            Användningen och utvärderingen av de olika ramverken kan hittas på undersidorna med samma namn.
         </p>
+        <!--Knappar till sidor om ramverken-->
         <div id="mainBtn">
-        <a class="frameworkBtn" href="./tailwind.html">Till Tailwind</a>
-        <a class="frameworkBtn" href="./bootstrap.html">Till Bootstrap</a>
+            <a class="frameworkBtn" href="./tailwind.html">Till Tailwind</a>
+            <a class="frameworkBtn" href="./bootstrap.html">Till Bootstrap</a>
         </div>
     </div>
 
+    <!--Design av footer-->
     <footer>
         Moment 1 <br> emfo2405
     </footer>
 
-<script src="menu.js"></script>
+    <!--Inkluderar JavaScript-filen för menyn-->
+    <script src="menu.js"></script>
 </body>
+
 </html>
