--- a/src/bootstrap.html
+++ b/src/bootstrap.html
@@ -24,26 +24,26 @@
             <!--Menylänkar-->
         <div class="dropdown-menu">
             <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-                href="/src/index.html">Startsida</a>
+                href="index.html">Startsida</a>
             <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-                href="/src/tailwind.html">Tailwind</a>
+                href="tailwind.html">Tailwind</a>
             <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-                href="/src/bootstrap.html">Bootstrap</a>
+                href="bootstrap.html">Bootstrap</a>
             <a class="dropdown-item link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-                href="/src/publicering.html">Publicering</a>
+                href="publicering.html">Publicering</a>
         </div>
     </div>
 
     <!--Meny för större skärmar-->
     <div class="bg-secondary-subtle fs-6 p-2 d-md-block d-none ">
         <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-            href="/src/index.html">Startsida</a>
+            href="index.html">Startsida</a>
         <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-            href="/src/tailwind.html">Tailwind</a>
+            href="tailwind.html">Tailwind</a>
         <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-            href="/src/bootstrap.html">Bootstrap</a>
+            href="bootstrap.html">Bootstrap</a>
         <a class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover p-3"
-            href="/src/publicering.html">Publicering</a>
+            href="publicering.html">Publicering</a>
     </div>
 
 <!--Sidtitel-->
