--- a/src/tailwind.html
+++ b/src/tailwind.html
@@ -20,10 +20,10 @@
 
     <!--Meny för större skärmstorlekar skapas-->
     <div class="bg-stone-400 p-2 text-lg text-center hidden md:block">
-        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/index.html">Startsida</a>
-        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/tailwind.html">Tailwind</a>
-        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/bootstrap.html">Bootstrap</a>
-        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/publicering.html">Publicering</a>
+        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="index.html">Startsida</a>
+        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="tailwind.html">Tailwind</a>
+        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="bootstrap.html">Bootstrap</a>
+        <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="publicering.html">Publicering</a>
     </div>
 
     <!--Meny för mindre skärmstorlekar skapas med menysymbol-->
@@ -31,10 +31,10 @@
         <div class="flex items-center p-2 bg-stone-400">Meny<span id="menuSymbol"
                 class="material-symbols-outlined cursor-pointer p-2">menu</span></div>
         <div id="smallMenu" class="bg-stone-400 p-2 text-lg flex flex-col">
-            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/index.html">Startsida</a>
-            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/tailwind.html">Tailwind</a>
-            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/bootstrap.html">Bootstrap</a>
-            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="/src/publicering.html">Publicering</a>
+            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="index.html">Startsida</a>
+            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="tailwind.html">Tailwind</a>
+            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="bootstrap.html">Bootstrap</a>
+            <a class="m-4 p-2 hover:bg-stone-600 hover:text-gray-50" href="publicering.html">Publicering</a>
         </div>
     </div>
 
