--- a/src/publicering.html
+++ b/src/publicering.html
@@ -20,20 +20,20 @@
     </div>
     <!--Menyn för större skärmstorlekar skapas-->
     <div id="menu">
-        <a href="/src/index.html">Startsida</a>
-        <a href="/src/tailwind.html">Tailwind</a>
-        <a href="/src/bootstrap.html">Bootstrap</a>
-        <a href="/src/publicering.html">Publicering</a>
+        <a href="index.html">Startsida</a>
+        <a href="tailwind.html">Tailwind</a>
+        <a href="bootstrap.html">Bootstrap</a>
+        <a href="publicering.html">Publicering</a>
     </div>
 
     <!--Menyn för mindre skärmstorlekar skapas tillsammans med en menysymbol-->
     <div>
         <div id="hamburgerSymbol">Meny <span class="material-symbols-outlined">menu</span></div>
         <div id="smallScreenMenu">
-            <a href="/src/index.html">Startsida</a>
-            <a href="/src/tailwind.html">Tailwind</a>
-            <a href="/src/bootstrap.html">Bootstrap</a>
-            <a href="/src/publicering.html">Publicering</a>
+            <a href="index.html">Startsida</a>
+            <a href="tailwind.html">Tailwind</a>
+            <a href="bootstrap.html">Bootstrap</a>
+            <a href="publicering.html">Publicering</a>
         </div>
     </div>
 
